--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   merge_build_host: true  # [win]
-  number: 0
+  number: 1
   rpaths:
     - lib/R/lib/
     - lib/
@@ -27,11 +27,11 @@ requirements:
     - {{ stdlib("m2w64_c") }}          # [win]
     - {{ compiler('fortran') }}        # [not win]
     - {{ compiler('m2w64_fortran') }}  # [win]
-    - {{ posix }}filesystem        # [win]
+    - {{ posix }}filesystem            # [win]
     - {{ posix }}make
-    - {{ posix }}sed               # [win]
-    - {{ posix }}coreutils         # [win]
-    - {{ posix }}zip               # [win]
+    - {{ posix }}sed                   # [win]
+    - {{ posix }}coreutils             # [win]
+    - {{ posix }}zip                   # [win]
   host:
     - r-base
   run:
@@ -48,21 +48,9 @@ about:
   license: Unlimited
   summary: Smoothing splines with penalties on order m derivatives.
   license_family: OTHER
+  license_file:
+    - LICENSE
 
 extra:
   recipe-maintainers:
     - conda-forge/r
-
-# Package: pspline
-# Version: 1.0-18
-# Date: 2017-06-12
-# Title: Penalized Smoothing Splines
-# Author: S original by Jim Ramsey <ramsay@psych.mcgill.ca>.  R port by  Brian Ripley <ripley@stats.ox.ac.uk>.
-# Maintainer: Brian Ripley <ripley@stats.ox.ac.uk>
-# Depends: R (>= 2.0.0), stats, graphics
-# Description: Smoothing splines with penalties on order m derivatives.
-# License: Unlimited
-# NeedsCompilation: yes
-# Packaged: 2017-06-12 07:54:59 UTC; ripley
-# Repository: CRAN
-# Date/Publication: 2017-06-12 10:10:40 UTC
